Add RAG Insights page and restructure RAG navigation
- Created new rag-insights.html with key findings from Bedrock docs
- Covers 5 chunking strategies in detail (default, fixed, hierarchical, semantic, none)
- Explains multimodal RAG (Nova vs BDA approaches)
- Production best practices section
- Real-world performance tips
- Changed RAG navigation to dropdown with 2 options:
  - Implementation Guide (rag-tutorial.html)
  - Insights & Best Practices (rag-insights.html)
- Updated all pages with new navigation structure

--- a/gold-market.html
+++ b/gold-market.html
@@ -84,7 +84,7 @@
     </style>
 </head>
 <body class="antialiased">
-    <header class="sticky top-0 bg-white/90 backdrop-blur-md z-10 border-b border-gray-200">
+        <header class="sticky top-0 bg-white/90 backdrop-blur-md z-10 border-b border-gray-200">
         <nav class="container mx-auto px-6 py-4">
             <div class="flex justify-between items-center">
                 <a href="index.html" class="text-2xl font-bold" style="color: #A52A2A;">From Data 2 AI</a>
@@ -97,7 +97,13 @@
                             <a href="gold-market.html">Gold Market Prediction</a>
                         </div>
                     </div>
-                    <a href="rag-tutorial.html" class="nav-link">RAG</a>
+                    <div class="dropdown">
+                        <span class="nav-link cursor-pointer">RAG ▾</span>
+                        <div class="dropdown-content">
+                            <a href="rag-tutorial.html">Implementation Guide</a>
+                            <a href="rag-insights.html">Insights & Best Practices</a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </nav>
