--- a/rag-bedrock.html
+++ b/rag-bedrock.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>RAG Insights & Best Practices - From Data 2 AI</title>
+    <title>RAG with Bedrock - From Data 2 AI</title>
     <link rel="icon" type="image/png" href="images/favicon.png">
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -71,24 +71,19 @@
     </style>
 </head>
 <body class="antialiased">
-    <header class="sticky top-0 bg-white/90 backdrop-blur-md z-10 border-b border-gray-200">
+        <header class="sticky top-0 bg-white/90 backdrop-blur-md z-10 border-b border-gray-200">
         <nav class="container mx-auto px-6 py-4">
             <div class="flex justify-between items-center">
                 <a href="index.html" class="text-2xl font-bold" style="color: #A52A2A;">From Data 2 AI</a>
                 <div class="flex items-center space-x-2">
                     <a href="llm.html" class="nav-link">LLM</a>
+                    <a href="finetuning.html" class="nav-link">Fine Tuning</a>
+                    <a href="rag-bedrock.html" class="nav-link">RAG</a>
                     <div class="dropdown">
-                        <a href="finetuning.html" class="nav-link">Fine Tuning ▾</a>
+                        <span class="nav-link cursor-pointer">Projects ▾</span>
                         <div class="dropdown-content">
-                            <a href="seal.html">SEAL Framework</a>
+                            <a href="rag-tutorial.html">Production RAG Pipeline</a>
                             <a href="gold-market.html">Gold Market Prediction</a>
-                        </div>
-                    </div>
-                    <div class="dropdown">
-                        <span class="nav-link cursor-pointer">RAG ▾</span>
-                        <div class="dropdown-content">
-                            <a href="rag-tutorial.html">Implementation Guide</a>
-                            <a href="rag-insights.html">Insights & Best Practices</a>
                         </div>
                     </div>
                 </div>
@@ -100,8 +95,8 @@
         <!-- Hero Section -->
         <section class="my-16 scroll-mt-20">
             <div class="text-center mb-12">
-                <h2 class="text-4xl font-bold mb-2">RAG Insights & Best Practices</h2>
-                <p class="text-lg text-gray-600">Key findings from AWS Bedrock documentation and real-world implementation</p>
+                <h2 class="text-4xl font-bold mb-2">RAG with Bedrock</h2>
+                <p class="text-lg text-gray-600">Deep dive into RAG concepts using AWS Bedrock Knowledge Bases</p>
                 <div class="flex justify-center gap-2 flex-wrap mt-6">
                     <span class="tech-badge">Chunking Strategies</span>
                     <span class="tech-badge">Semantic Search</span>
@@ -347,7 +342,7 @@
                     <h3 class="font-bold text-lg mb-3" style="color: #A52A2A;">Quick Links</h3>
                     <p class="text-sm"><a href="llm.html" class="text-gray-600 hover:text-gray-900">LLM</a></p>
                     <p class="text-sm"><a href="finetuning.html" class="text-gray-600 hover:text-gray-900">Fine Tuning</a></p>
-                    <p class="text-sm"><a href="rag-tutorial.html" class="text-gray-600 hover:text-gray-900">RAG Tutorial</a></p>
+                    <p class="text-sm"><a href="rag-bedrock.html" class="text-gray-600 hover:text-gray-900">RAG</a></p>
                 </div>
             </div>
             <div class="mt-8 pt-6 border-t border-gray-300 text-center text-gray-600 text-sm">
