--- a/seal.html
+++ b/seal.html
@@ -91,24 +91,19 @@
     </style>
 </head>
 <body class="antialiased">
-                        <header class="sticky top-0 bg-white/90 backdrop-blur-md z-10 border-b border-gray-200">
+                            <header class="sticky top-0 bg-white/90 backdrop-blur-md z-10 border-b border-gray-200">
         <nav class="container mx-auto px-6 py-4">
             <div class="flex justify-between items-center">
                 <a href="index.html" class="text-2xl font-bold" style="color: #A52A2A;">From Data 2 AI</a>
                 <div class="flex items-center space-x-2">
                     <a href="llm.html" class="nav-link">LLM</a>
+                    <a href="finetuning.html" class="nav-link">Fine Tuning</a>
+                    <a href="rag-bedrock.html" class="nav-link">RAG</a>
                     <div class="dropdown">
-                        <a href="finetuning.html" class="nav-link">Fine Tuning ▾</a>
+                        <span class="nav-link cursor-pointer">Projects ▾</span>
                         <div class="dropdown-content">
-                            <a href="seal.html">SEAL Framework</a>
+                            <a href="rag-tutorial.html">Production RAG Pipeline</a>
                             <a href="gold-market.html">Gold Market Prediction</a>
-                        </div>
-                    </div>
-                    <div class="dropdown">
-                        <span class="nav-link cursor-pointer">RAG ▾</span>
-                        <div class="dropdown-content">
-                            <a href="rag-tutorial.html">Implementation Guide</a>
-                            <a href="rag-insights.html">Insights & Best Practices</a>
                         </div>
                     </div>
                 </div>
