Fix card structure: titles now inside white boxes
- Moved section titles inside cards for consistent design
- Applies to: rag-bedrock.html, gold-market.html
- Matches SEAL framework pattern
- All content now properly contained in white boxes

--- a/gold-market.html
+++ b/gold-market.html
@@ -131,7 +131,8 @@
         </section>
         <!-- Overview -->
         <section id="overview" class="my-16 scroll-mt-20">
-            <div class="text-center mb-12">
+            <div class="card p-8 max-w-4xl mx-auto">
+                <div class="text-center mb-12">
                 <h2 class="text-4xl font-bold mb-2">Project Overview</h2>
                 <p class="text-lg text-gray-600">Predicting XAU/USD price movements using LLMs and sentiment analysis</p>
             </div>
