--- a/seal.html
+++ b/seal.html
@@ -141,7 +141,8 @@
         </section>
 
         <section id="analogy" class="my-16 scroll-mt-20">
-            <div class="text-center mb-12">
+            <div class="card p-8 max-w-4xl mx-auto">
+                <div class="text-center mb-12">
                 <h2 class="text-4xl font-bold mb-2">Introduce & Analogize</h2>
                 <p class="text-lg text-gray-600">Let's grasp the core idea with a simple, powerful analogy.</p>
             </div>
