--- a/rag-bedrock.html
+++ b/rag-bedrock.html
@@ -118,7 +118,9 @@
 
         <!-- Chunking Strategies -->
         <section id="chunking" class="my-16 scroll-mt-20">
-            <div class="text-center mb-12">
+            <div class="card p-8">
+                <div class="card p-8 max-w-4xl mx-auto">
+                    <div class="text-center mb-12">
                     <h2 class="text-4xl font-bold mb-2">Chunking Strategies Deep Dive</h2>
                     <p class="text-lg text-gray-600">Understanding different approaches and when to use each</p>
                 </div>
@@ -174,7 +176,9 @@
         </section>
         <!-- Multimodal RAG -->
         <section id="multimodal" class="my-16 scroll-mt-20">
-            <div class="text-center mb-12">
+            <div class="card p-8">
+                <div class="card p-8 max-w-4xl mx-auto">
+                <div class="text-center mb-12">
                     <h2 class="text-4xl font-bold mb-2">Multimodal RAG</h2>
                     <p class="text-lg text-gray-600">Beyond text: images, audio, and video in RAG systems</p>
                 </div>
@@ -225,7 +229,9 @@
 
         <!-- Best Practices -->
         <section id="best-practices" class="my-16 scroll-mt-20">
-            <div class="text-center mb-12">
+            <div class="card p-8">
+                <div class="card p-8 max-w-4xl mx-auto">
+                <div class="text-center mb-12">
                     <h2 class="text-4xl font-bold mb-2">Production Best Practices</h2>
                     <p class="text-lg text-gray-600">Lessons learned from real-world implementations</p>
                 </div>
@@ -299,7 +305,9 @@
 
         <!-- Key Takeaways -->
         <section id="takeaways" class="my-16 scroll-mt-20">
-            <div class="text-center mb-12">
+            <div class="card p-8">
+                <div class="card p-8 max-w-4xl mx-auto">
+                <div class="text-center mb-12">
                     <h2 class="text-4xl font-bold mb-2">Key Takeaways</h2>
                     <p class="text-lg text-gray-600">Essential insights for building production RAG systems</p>
                 </div>
