Apply new design pattern: title/desc outside, subsections in separate cards

--- a/seal.html
+++ b/seal.html
@@ -151,7 +151,7 @@
                         <p class="text-lg text-gray-600">Let's grasp the core idea with a simple, powerful analogy.</p>
 
                     </div>
-                <h3 class="text-2xl font-semibold text-center mb-6 text-A52A2A">The Master Chef's Kitchen</h3>
+                <h3 class="text-2xl font-semibold mb-4">The Master Chef's Kitchen</h3>
                 <p class="text-gray-700 mb-4 leading-relaxed">
                     Imagine an Augmented Language Model (ALM) is a world-class chef. The core Language Model (like GPT-4) is the chef's brilliant mind—full of creativity, knowledge, and culinary intuition. But a chef's mind alone can't create a feast. They need a kitchen full of tools.
                 </p>
@@ -192,7 +192,7 @@
                         <p class="text-lg text-gray-600">From first principles, how does an ALM actually work?</p>
 
                     </div>
-                 <h3 class="text-2xl font-semibold text-center mb-6 text-A52A2A">From Prompt to Action: The "Reason-Act" Cycle</h3>
+                 <h3 class="text-2xl font-semibold mb-4">From Prompt to Action: The "Reason-Act" Cycle</h3>
                  <p class="text-center text-gray-700 mb-8">An ALM follows a "Reason-Act" cycle. The LLM's 'brain' first thinks about the problem, then chooses and uses a tool, observes the result, and repeats until the task is complete. This section explains this fundamental process and how these tools are defined in code.</p>
                 <div class="flex flex-col md:flex-row items-center justify-center space-y-4 md:space-y-0 md:space-x-4 my-8 text-center p-4 bg-F0EBE3/50 rounded-lg">
                     <div class="p-3 rounded-lg bg-blue-50 border border-blue-200 shadow-sm">User Query</div>
@@ -243,12 +243,12 @@
             <div class="card p-8">
                 <div class="grid md:grid-cols-2 gap-8 max-w-5xl mx-auto">
                 <div class="card p-6">
-                    <h3 class="text-2xl font-semibold text-A52A2A mb-4">Atomic Skills: The Basic Techniques</h3>
+                    <h3 class="text-2xl font-semibold mb-4">Atomic Skills: The Basic Techniques</h3>
                     <p class="text-gray-600 mb-4">These are the fundamental actions an ALM can take, like individual cooking techniques. SEAL tests these in isolation to see if the model has mastered the basics. Click on a skill to learn more.</p>
                     <div id="skills-container" class="space-y-2"></div>
                 </div>
                 <div class="card p-6">
-                    <h3 class="text-2xl font-semibold text-A52A2A mb-4">Complex Scenarios: The Full Recipe</h3>
+                    <h3 class="text-2xl font-semibold mb-4">Complex Scenarios: The Full Recipe</h3>
                     <p class="text-gray-600 mb-4">These are multi-step problems that require combining multiple skills in the correct order to solve, just like a complete recipe. This tests the model's ability to plan and execute a complex strategy.</p>
                     <div id="scenarios-container" class="space-y-2"></div>
                 </div>
@@ -266,7 +266,7 @@
                         <p class="text-lg text-gray-600">The data science and scientific methodology behind the evaluation.</p>
 
                     </div>
-                 <h3 class="text-2xl font-semibold text-center mb-6 text-A52A2A">From "Recipe" to "Graph"</h3>
+                 <h3 class="text-2xl font-semibold mb-4">From "Recipe" to "Graph"</h3>
                  <p class="text-gray-700 mb-6 leading-relaxed">
                     This is the core technical insight. A "Scenario" isn't just a prompt; it's a "white-box" test case. From a data science perspective, each scenario is structured as a <span class="font-semibold text-A52A2A">Directed Acyclic Graph (DAG)</span>. Each node in the graph is a specific skill (a tool call), and the edges define the dependencies. This graph *is* the "correct recipe."
                  </p>
