Apply design pattern to all tutorial pages + add helper script

--- a/gold-market.html
+++ b/gold-market.html
@@ -490,15 +490,15 @@ def predict_gold_movement(news_headline, market_features):
         <!-- Technical Details -->
         <section id="technical" class="my-16 scroll-mt-20">
             <div class="card p-8">
-                <div class="card p-8 max-w-4xl mx-auto">
+        <!-- Technical Details -->
+        <section id="technical" class="my-16 scroll-mt-20">
+            <div class="card p-8">
+                <div class="text-center mb-12">
+                    <h2 class="text-4xl font-bold mb-2">Models & Deployment</h2>
+                    <p class="text-lg text-gray-600">Modern ML engineering practices</p>
+                </div>
 
-                    <div class="text-center mb-12">
-
-                        <h2 class="text-4xl font-bold mb-2">Models & Deployment</h2>
-
-                        <p class="text-lg text-gray-600">Modern ML engineering practices</p>
-
-                    </div>
+                <div class="card p-8 max-w-4xl mx-auto mb-8">
                 <h3 class="text-2xl font-semibold mb-4" style="color: #A52A2A;">Models & Methods</h3>
                 
                 <div class="mb-6">
@@ -520,7 +520,9 @@ def predict_gold_movement(news_headline, market_features):
                         <li>Reduces trainable parameters by 99%</li>
                     </ul>
                 </div>
+            </div>
 
+            <div class="card p-8 max-w-4xl mx-auto">
                 <h3 class="text-2xl font-semibold mb-4" style="color: #A52A2A;">Use Cases</h3>
                 <div class="grid md:grid-cols-2 gap-4">
                     <div class="bg-blue-50 p-4 rounded-lg">
