--- a/seal.html
+++ b/seal.html
@@ -142,15 +142,15 @@
 
         <section id="analogy" class="my-16 scroll-mt-20">
             <div class="card p-8">
-                <div class="card p-8 max-w-4xl mx-auto">
-
-                    <div class="text-center mb-12">
+                <div class="text-center mb-12">
 
                         <h2 class="text-4xl font-bold mb-2">Introduce & Analogize</h2>
 
                         <p class="text-lg text-gray-600">Let's grasp the core idea with a simple, powerful analogy.</p>
 
                     </div>
+
+                <div class="card p-8 max-w-4xl mx-auto mb-8">
                 <h3 class="text-2xl font-semibold mb-4">The Master Chef's Kitchen</h3>
                 <p class="text-gray-700 mb-4 leading-relaxed">
                     Imagine an Augmented Language Model (ALM) is a world-class chef. The core Language Model (like GPT-4) is the chef's brilliant mind—full of creativity, knowledge, and culinary intuition. But a chef's mind alone can't create a feast. They need a kitchen full of tools.
@@ -183,15 +183,15 @@
 
         <section id="deconstruction" class="my-16 scroll-mt-20">
             <div class="card p-8">
-                <div class="card p-8 max-w-4xl mx-auto">
-
-                    <div class="text-center mb-12">
+                <div class="text-center mb-12">
 
                         <h2 class="text-4xl font-bold mb-2">Deconstruct & Rebuild</h2>
 
                         <p class="text-lg text-gray-600">From first principles, how does an ALM actually work?</p>
 
                     </div>
+
+                <div class="card p-8 max-w-4xl mx-auto mb-8">
                  <h3 class="text-2xl font-semibold mb-4">From Prompt to Action: The "Reason-Act" Cycle</h3>
                  <p class="text-center text-gray-700 mb-8">An ALM follows a "Reason-Act" cycle. The LLM's 'brain' first thinks about the problem, then chooses and uses a tool, observes the result, and repeats until the task is complete. This section explains this fundamental process and how these tools are defined in code.</p>
                 <div class="flex flex-col md:flex-row items-center justify-center space-y-4 md:space-y-0 md:space-x-4 my-8 text-center p-4 bg-F0EBE3/50 rounded-lg">
@@ -230,11 +230,12 @@
 
         <section id="framework" class="my-16 scroll-mt-20">
             <div class="card p-8">
-                <div class="card p-8 max-w-4xl mx-auto">
                 <div class="text-center mb-12">
                     <h2 class="text-4xl font-bold mb-2">Synthesize & "Chunk"</h2>
                     <p class="text-lg text-gray-600">Breaking down the SEAL Framework into memorable chunks.</p>
                 </div>
+
+                <div class="card p-8 max-w-4xl mx-auto mb-8">
             </div>
             <div class="card p-8 max-w-4xl mx-auto mb-8">
                 <p class="text-center text-gray-700 mb-2">The SEAL framework provides the "Michelin inspector's toolkit" for evaluating our AI chefs. Instead of one giant, complex test, it breaks down the evaluation into two core, manageable concepts: <span class="font-semibold text-A52A2A">Skills</span> and <span class="font-semibold text-A52A2A">Scenarios</span>. By testing these fundamental building blocks, we get a much clearer picture of what a model can and cannot do. Explore the cards below to see how they work.</p>
@@ -257,15 +258,15 @@
 
         <section id="science" class="my-16 scroll-mt-20">
             <div class="card p-8">
-                <div class="card p-8 max-w-4xl mx-auto">
-
-                    <div class="text-center mb-12">
+                <div class="text-center mb-12">
 
                         <h2 class="text-4xl font-bold mb-2">The Science of SEAL</h2>
 
                         <p class="text-lg text-gray-600">The data science and scientific methodology behind the evaluation.</p>
 
                     </div>
+
+                <div class="card p-8 max-w-4xl mx-auto mb-8">
                  <h3 class="text-2xl font-semibold mb-4">From "Recipe" to "Graph"</h3>
                  <p class="text-gray-700 mb-6 leading-relaxed">
                     This is the core technical insight. A "Scenario" isn't just a prompt; it's a "white-box" test case. From a data science perspective, each scenario is structured as a <span class="font-semibold text-A52A2A">Directed Acyclic Graph (DAG)</span>. Each node in the graph is a specific skill (a tool call), and the edges define the dependencies. This graph *is* the "correct recipe."
@@ -336,11 +337,12 @@
 
         <section id="showdown" class="my-16 scroll-mt-20">
             <div class="card p-8">
-                <div class="card p-8 max-w-4xl mx-auto">
                 <div class="text-center mb-12">
                     <h2 class="text-4xl font-bold mb-2">The Model Showdown</h2>
                     <p class="text-lg text-gray-600">An interactive comparison of how different models perform.</p>
                 </div>
+
+                <div class="card p-8 max-w-4xl mx-auto mb-8">
                  <p class="text-center text-gray-700 mb-8 max-w-3xl mx-auto">Here, you can explore the performance data from the SEAL evaluation. The chart below visualizes how leading models compare across different evaluation criteria. Use the buttons to switch between viewing overall performance, breaking it down by specific skills, or analyzing performance in complex scenarios. This interactive view allows you to see the nuanced strengths and weaknesses of each model, something a static report can't show.</p>
                 <div class="flex justify-center space-x-2 mb-6" id="chart-controls">
                     <button class="btn active" data-view="overall">Overall</button>
@@ -359,11 +361,12 @@
 
         <section id="critical-look" class="my-16 scroll-mt-20">
             <div class="card p-8">
-                <div class="card p-8 max-w-4xl mx-auto">
                 <div class="text-center mb-12">
                     <h2 class="text-4xl font-bold mb-2">Analyze Critically</h2>
                     <p class="text-lg text-gray-600">No framework is perfect. Let's discuss the trade-offs.</p>
                 </div>
+
+                <div class="card p-8 max-w-4xl mx-auto mb-8">
                 <p class="text-center text-gray-700 mb-8">While SEAL's process-based, DAG-driven approach is a significant scientific advancement, it's essential to understand its limitations and the broader challenges facing ALMs. A critical perspective helps us see the full picture.</p>
                 <div class="grid md:grid-cols-2 gap-8">
                     <div>
