--- a/rag-bedrock.html
+++ b/rag-bedrock.html
@@ -119,11 +119,12 @@
         <!-- Chunking Strategies -->
         <section id="chunking" class="my-16 scroll-mt-20">
             <div class="card p-8">
-                <div class="card p-8 max-w-4xl mx-auto">
-                    <div class="text-center mb-12">
+                <div class="text-center mb-12">
                     <h2 class="text-4xl font-bold mb-2">Chunking Strategies Deep Dive</h2>
                     <p class="text-lg text-gray-600">Understanding different approaches and when to use each</p>
                 </div>
+
+                <div class="card p-8 max-w-4xl mx-auto mb-8">
                 <p class="text-gray-700 leading-relaxed mb-6">
                     Amazon Bedrock Knowledge Bases supports <strong>four main chunking strategies</strong>, each optimized for different use cases:
                 </p>
@@ -177,11 +178,12 @@
         <!-- Multimodal RAG -->
         <section id="multimodal" class="my-16 scroll-mt-20">
             <div class="card p-8">
-                <div class="card p-8 max-w-4xl mx-auto">
                 <div class="text-center mb-12">
                     <h2 class="text-4xl font-bold mb-2">Multimodal RAG</h2>
                     <p class="text-lg text-gray-600">Beyond text: images, audio, and video in RAG systems</p>
                 </div>
+
+                <div class="card p-8 max-w-4xl mx-auto mb-8">
                 <p class="text-gray-700 leading-relaxed mb-6">
                     Bedrock Knowledge Bases supports multimodal content through two distinct approaches:
                 </p>
@@ -230,11 +232,12 @@
         <!-- Best Practices -->
         <section id="best-practices" class="my-16 scroll-mt-20">
             <div class="card p-8">
-                <div class="card p-8 max-w-4xl mx-auto">
                 <div class="text-center mb-12">
                     <h2 class="text-4xl font-bold mb-2">Production Best Practices</h2>
                     <p class="text-lg text-gray-600">Lessons learned from real-world implementations</p>
                 </div>
+
+                <div class="card p-8 max-w-4xl mx-auto mb-8">
                 <div class="space-y-6">
                     <div>
                         <h3 class="text-xl font-semibold mb-3" style="color: #A52A2A;">1. Retrieval Optimization</h3>
@@ -306,11 +309,12 @@
         <!-- Key Takeaways -->
         <section id="takeaways" class="my-16 scroll-mt-20">
             <div class="card p-8">
-                <div class="card p-8 max-w-4xl mx-auto">
                 <div class="text-center mb-12">
                     <h2 class="text-4xl font-bold mb-2">Key Takeaways</h2>
                     <p class="text-lg text-gray-600">Essential insights for building production RAG systems</p>
                 </div>
+
+                <div class="card p-8 max-w-4xl mx-auto mb-8">
                 <div class="grid md:grid-cols-2 gap-6">
                     <div class="bg-purple-50 p-6 rounded-lg">
                         <h4 class="font-semibold text-purple-900 mb-3">🎯 Chunking</h4>
